# matlab-mcp-server

./: .env.example  .gitignore  BUILD.md  DEBUGGING_NOTES.md  LICENSE  PROJECT_SUMMARY.md  README.md  SETUP_INSTRUCTIONS.md  build.bat  build.sh  build_installer.bat  check_matlab.py  find_inno.py  matlab-mcp-server.spec  pyproject.toml  run_matlab_mcp.bat  test_execute_direct.py  test_figure_detection.py  test_imports.py  test_mcp.py  test_mcp_fixed.bat  test_mcp_init.py  test_mcp_simple.bat  test_minimal_async.py  test_output.txt  test_server_direct.py  test_simple_matlab.py
.claude/: settings.local.json
hooks/: hook-matlab.py  hook-mcp.py
installer/: INSTALL_INFO.txt  setup.iss
src/matlab_mcp_server/: __init__.py  main.py  matlab_engine_wrapper.py  server.py  server.py.backup
