[project]
name = "matlab-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for local MATLAB with comprehensive output capture and export capabilities"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
